fix spacing b/w menu icons and footer

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -74,6 +74,7 @@ img {
 	height: 190px;
 	width: 190px;
 	padding-right: 7%;
+	margin-bottom: 150px;
 }
 .menu {
 	text-align: center;
